--- a/po/be.po
+++ b/po/be.po
@@ -1,26 +1,26 @@
+# Беларускі пераклад be.
 # Беларускі пераклад yelp.HEAD.
 # translation of yelp.HEAD.be.po to Belarusian
-# Copyright (C) 2002,2003 Free Software Foundation, Inc.
-# Ales Nyakhaychyk <nab@mail.by>, 2003.
+# Copyright (C) 2002,2003, 2004 Free Software Foundation, Inc.
+# Ales Nyakhaychyk <nab@mail.by>, 2003, 2004.
 # Vital Khilko <dojlid@mova.org>, 2003.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: yelp.HEAD\n"
-"Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2004-02-10 03:17-0600\n"
-"PO-Revision-Date: 2003-12-13 10:27+0200\n"
+"Project-Id-Version: be\n"
+"POT-Creation-Date: 2004-02-04 17:19-0600\n"
+"PO-Revision-Date: 2004-02-17 01:06+0200\n"
 "Last-Translator: Ales Nyakhaychyk <nab@mail.by>\n"
 "Language-Team: Belarusian <i18n@mova.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Report-Msgid-Bugs-To: \n"
 "X-Generator: KBabel 1.0.2\n"
 
 #: data/toc.xml.in.h:1
-#, fuzzy
 msgid "Applets"
-msgstr "Дастасаваньні"
+msgstr "Аплеты"
 
 #: data/toc.xml.in.h:2 src/yelp-man.c:429
 msgid "Applications"
@@ -91,9 +91,8 @@ msgid "Securities"
 msgstr "Бясьпека"
 
 #: data/toc.xml.in.h:19
-#, fuzzy
 msgid "System"
-msgstr "Сыстэмныя выклікі"
+msgstr "Сыстэма"
 
 #: data/toc.xml.in.h:20
 msgid "Utilities"
@@ -109,15 +108,15 @@ msgstr "*"
 
 #: data/ui/yelp.glade.h:2
 msgid "C_ase sensitive"
-msgstr ""
+msgstr "Адрозьніваць рэ_гістры"
 
 #: data/ui/yelp.glade.h:3
 msgid "Find"
-msgstr ""
+msgstr "Пошук"
 
 #: data/ui/yelp.glade.h:4
 msgid "_Find: "
-msgstr ""
+msgstr "По_шук:"
 
 #: data/ui/yelp.glade.h:5
 msgid "_Next"
@@ -129,7 +128,7 @@ msgstr "_Папярэдняе"
 
 #: data/ui/yelp.glade.h:7
 msgid "_Wrap around"
-msgstr ""
+msgstr "Загортваць наў_кола"
 
 #: src/GNOME_Yelp.server.in.h:1
 msgid "Yelp"
@@ -147,29 +146,27 @@ msgstr "Рыса href ня знойдзена ў yelp:document"
 msgid "Out of memory"
 msgstr "Бракуе памяці"
 
-#: src/yelp-db-pager.c:631 src/yelp-man-pager.c:370
+#: src/yelp-db-pager.c:627 src/yelp-man-pager.c:370
 msgid "Titlepage"
 msgstr "Тытульная старонка"
 
-#: src/yelp-db-pager.c:633 stylesheets/l10n.xml.in.h:30
+#: src/yelp-db-pager.c:629 stylesheets/l10n.xml.in.h:30
 #: src/yelp-man-pager.c:372
 msgid "Contents"
 msgstr "Зьмест"
 
-#: src/yelp-db-pager.c:651 stylesheets/l10n.xml.in.h:69
+#: src/yelp-db-pager.c:647 stylesheets/l10n.xml.in.h:68
 #: src/yelp-man-pager.c:390
 msgid "Unknown"
 msgstr "Невядома"
 
 #: src/yelp-error.c:46
-#, fuzzy
 msgid "The selected document could not be opened"
-msgstr "Дакумэнт \"%s\" ня можа быць адчынены"
+msgstr "Немагчыма адчыніць вылучаны дакумэнт"
 
 #: src/yelp-error.c:52
-#, fuzzy
 msgid "The selected page could not be found in this document."
-msgstr "Дакумэнт \"%s\" ня можа быць адчынены"
+msgstr "Немагчыма адшукаць вылучаную старонку ў гэтым дакумэнце."
 
 #: src/yelp-error.c:58
 msgid "The table of contents could not be read."
@@ -180,9 +177,8 @@ msgid "DocBook SGML documents are no longer supported."
 msgstr "Дакумэнты DocBook SGML больш не падтрымліваюцца."
 
 #: src/yelp-error.c:70
-#, fuzzy
 msgid "The selected file could not be read."
-msgstr "Немагчыма прачытаць табліцу зьместу."
+msgstr "Немагчыма прачытаць вылучаны файл."
 
 #: src/yelp-main.c:94
 msgid "Define which cache directory to use"
@@ -271,9 +267,9 @@ msgid "YelpTocPager: Pause count is negative."
 msgstr "YelpTocPager: колькасьць прыпыненьняў - адмоўная."
 
 #: src/yelp-toc-pager.c:486
-#, fuzzy, c-format
+#, c-format
 msgid "Could not load the OMF file '%s'."
-msgstr "Ня атрымалася актывізаваць Yelp: \"%s\""
+msgstr "Немагчыма загрузіць OMF-файл \"%s\"."
 
 #: src/yelp-toc-pager.c:892
 msgid "Categories"
@@ -297,22 +293,19 @@ msgstr "/Файл/_Закрыць акно"
 
 #: src/yelp-window.c:256
 msgid "/_Edit"
-msgstr "/_Рэдагаваць"
+msgstr "/_Рэдагаваньне"
 
 #: src/yelp-window.c:257
-#, fuzzy
 msgid "/Edit/_Find..."
-msgstr "/Рэдагаваць/_Шукаць на старонцы..."
+msgstr "/Рэдагаваньне/По_шук..."
 
 #: src/yelp-window.c:260
-#, fuzzy
 msgid "/Edit/Find Ne_xt"
 msgstr "/Рэдагаваньне/Шукаць _далей"
 
 #: src/yelp-window.c:263
-#, fuzzy
 msgid "/Edit/Find Pre_vious"
-msgstr "/Рэдагаваньне/Шукаць _далей"
+msgstr "/Рэдагаваньне/Шукаць _раней"
 
 #: src/yelp-window.c:267
 msgid "/_Go"
@@ -331,24 +324,20 @@ msgid "/Go/_Home"
 msgstr "/Пераход/У _пачатак"
 
 #: src/yelp-window.c:277
-#, fuzzy
 msgid "/Go/"
-msgstr "/Пера_ход"
+msgstr "/Пераход"
 
 #: src/yelp-window.c:278
-#, fuzzy
 msgid "/Go/_Previous Page"
-msgstr "_Папярэдняе"
+msgstr "/Пераход/Да _папярэдняй старонкі"
 
 #: src/yelp-window.c:281
-#, fuzzy
 msgid "/Go/_Next Page"
-msgstr "_Наступнае"
+msgstr "/Пераход/Да _наступнай старонкі"
 
 #: src/yelp-window.c:284
-#, fuzzy
 msgid "/Go/_Contents"
-msgstr "Зьмест"
+msgstr "/Пераход/Да _зьместу"
 
 #: src/yelp-window.c:288
 msgid "/_Help"
@@ -360,9 +349,9 @@ msgstr "/Даведка/_Пра праграму"
 
 #: src/yelp-window.c:351
 msgid "Help Browser"
-msgstr "Праглядальнік даведкі"
+msgstr "Вандроўнік па даведке"
 
-#: src/yelp-window.c:569 stylesheets/l10n.xml.in.h:61
+#: src/yelp-window.c:569 stylesheets/l10n.xml.in.h:60
 msgid "Section"
 msgstr "Параграфы"
 
@@ -372,7 +361,7 @@ msgstr "Назад"
 
 #: src/yelp-window.c:625
 msgid "Show previous page in history"
-msgstr "Паказаць папярэднюю старонку"
+msgstr "Паказаць папярэднюю старонку з гісторыі"
 
 #: src/yelp-window.c:635
 msgid "Forward"
@@ -380,7 +369,7 @@ msgstr "Наперад"
 
 #: src/yelp-window.c:636
 msgid "Show next page in history"
-msgstr "Паказаць наступную старонку"
+msgstr "Паказаць наступную старонку з гісторыі"
 
 #: src/yelp-window.c:648
 msgid "Home"
@@ -404,276 +393,267 @@ msgstr ""
 
 #: src/yelp-window.c:1295
 msgid "A Help Browser for GNOME"
-msgstr "Праграма прагляду даведкі для GNOME"
+msgstr "Вандроўнік па даведке для GNOME"
 
 #: stylesheets/l10n.xml.in.h:1
 msgid "&#8216;"
-msgstr ""
+msgstr "&#8216;"
 
 #: stylesheets/l10n.xml.in.h:2
 msgid "&#8217;"
-msgstr ""
+msgstr "&#8217;"
 
 #: stylesheets/l10n.xml.in.h:3
 msgid "&#8220;"
-msgstr ""
+msgstr "&#8220;"
 
 #: stylesheets/l10n.xml.in.h:4
 msgid "&#8221;"
-msgstr ""
+msgstr "&#8221;"
 
 #: stylesheets/l10n.xml.in.h:5
 msgid "About This Article"
-msgstr ""
+msgstr "Пра гэты артыкул"
 
 #: stylesheets/l10n.xml.in.h:6
 msgid "About This Bibliography"
-msgstr ""
+msgstr "Пра гэтую крыніцу"
 
 #: stylesheets/l10n.xml.in.h:7
 msgid "About This Book"
-msgstr ""
+msgstr "Пра гэтую кнігу"
 
 #: stylesheets/l10n.xml.in.h:8
 msgid "About This Chapter"
-msgstr ""
+msgstr "Пра гэтую главу"
 
 #: stylesheets/l10n.xml.in.h:9
 msgid "About This Entry"
-msgstr ""
+msgstr "Пра гэты запіс"
 
 #: stylesheets/l10n.xml.in.h:10
 msgid "About This Glossary"
-msgstr ""
+msgstr "Пра гэты сьпіс тэрмінаў"
 
 #: stylesheets/l10n.xml.in.h:11
 msgid "About This Index"
-msgstr ""
+msgstr "Пра гэтыя ключавыя словы"
 
 #: stylesheets/l10n.xml.in.h:12
 msgid "About This Part"
-msgstr ""
+msgstr "Пра гэтую частку"
 
 #: stylesheets/l10n.xml.in.h:13
 msgid "About This Preface"
-msgstr ""
+msgstr "Пра гэтую прадмову"
 
 #: stylesheets/l10n.xml.in.h:14
 msgid "About This Reference"
-msgstr ""
+msgstr "Пра гэты даведнік"
 
 #: stylesheets/l10n.xml.in.h:15
 msgid "About This Section"
-msgstr ""
+msgstr "Пра гэты падзел"
 
 #: stylesheets/l10n.xml.in.h:16
 msgid "About This Set"
-msgstr ""
+msgstr "Пра гэты збор"
 
 #: stylesheets/l10n.xml.in.h:17
-#, fuzzy
 msgid "Affiliation"
-msgstr "Дастасаваньні"
+msgstr "Бацькоўства"
 
 #: stylesheets/l10n.xml.in.h:18
 msgid "Appendix"
-msgstr ""
+msgstr "Дадаткі"
 
 #: stylesheets/l10n.xml.in.h:19
 msgid "Article"
-msgstr ""
+msgstr "Артыкул"
 
 #: stylesheets/l10n.xml.in.h:20
 msgid "Audience"
-msgstr ""
+msgstr "Слухачы"
 
 #: stylesheets/l10n.xml.in.h:21
 msgid "Author"
-msgstr ""
+msgstr "Аўтар"
 
 #: stylesheets/l10n.xml.in.h:22
 msgid "Authors"
-msgstr ""
+msgstr "Аўтары"
 
 #: stylesheets/l10n.xml.in.h:23
 msgid "Bibliography"
-msgstr ""
+msgstr "Бібліяграфія"
 
 #: stylesheets/l10n.xml.in.h:24
 msgid "Book"
-msgstr ""
+msgstr "Кніга"
 
 #: stylesheets/l10n.xml.in.h:25
 msgid "Caution"
-msgstr ""
+msgstr "Перасьцярога"
 
 #: stylesheets/l10n.xml.in.h:26
 msgid "Chapter"
-msgstr ""
+msgstr "Частка"
 
 #: stylesheets/l10n.xml.in.h:27
 msgid "Collaborator"
-msgstr ""
+msgstr "Супрацоўнік"
 
 #: stylesheets/l10n.xml.in.h:28
 msgid "Collaborators"
-msgstr ""
+msgstr "Супрацоўнік"
 
 #: stylesheets/l10n.xml.in.h:29
 msgid "Colophon"
-msgstr ""
+msgstr "Выходныя зьвесткі"
 
 #: stylesheets/l10n.xml.in.h:31
 msgid "Copyright"
-msgstr ""
+msgstr "Аўтарскае права"
 
 #: stylesheets/l10n.xml.in.h:32
 msgid "Copyrights"
-msgstr ""
+msgstr "Аўтарскія правы"
 
 #: stylesheets/l10n.xml.in.h:33
 msgid "Date"
-msgstr ""
+msgstr "Дата"
 
 #: stylesheets/l10n.xml.in.h:34
-#, fuzzy
 msgid "Dedication"
-msgstr "Параграфы"
+msgstr "Прысьвячэньне"
 
 #: stylesheets/l10n.xml.in.h:35
-#, fuzzy
 msgid "Editor"
-msgstr "Рэдагавальнікі"
+msgstr "Рэдактар"
 
 #: stylesheets/l10n.xml.in.h:37
 msgid "Email"
-msgstr ""
+msgstr "Адрас"
 
 #: stylesheets/l10n.xml.in.h:38
 msgid "Example"
-msgstr ""
+msgstr "Прыклад"
 
 #: stylesheets/l10n.xml.in.h:39
 msgid "Figure"
-msgstr ""
+msgstr "Малюнак"
 
 #: stylesheets/l10n.xml.in.h:40
 msgid "Glossary"
-msgstr ""
+msgstr "Сьпіс тэрмінаў"
 
 #: stylesheets/l10n.xml.in.h:41
 msgid "Important"
-msgstr ""
+msgstr "Важна"
 
 #: stylesheets/l10n.xml.in.h:42
 msgid "Index"
-msgstr ""
+msgstr "Ключавыя словы"
 
 #: stylesheets/l10n.xml.in.h:43
 msgid "Legal Notice"
-msgstr ""
+msgstr "Прававы стан"
 
 #: stylesheets/l10n.xml.in.h:44
 msgid "Level"
-msgstr ""
+msgstr "Узровень"
 
 #: stylesheets/l10n.xml.in.h:45
 msgid "Message Audience"
-msgstr ""
+msgstr "Слухачы паведамленьня"
 
 #: stylesheets/l10n.xml.in.h:46
 msgid "Message Level"
-msgstr ""
+msgstr "Узровень паведамленьня"
 
 #: stylesheets/l10n.xml.in.h:47
 msgid "Message Origin"
-msgstr ""
+msgstr "Першакрыніца паведамленьня"
 
 #: stylesheets/l10n.xml.in.h:48
 msgid "Note"
-msgstr ""
+msgstr "Нататка"
 
 #: stylesheets/l10n.xml.in.h:49
 msgid "Origin"
-msgstr ""
+msgstr "Першакрыніца"
 
 #: stylesheets/l10n.xml.in.h:50
 msgid "Other Contributor"
-msgstr ""
+msgstr "Іншы ўкладальнік"
 
 #: stylesheets/l10n.xml.in.h:51
 msgid "Other Contributors"
-msgstr ""
+msgstr "Іншыя ўкладальнікі"
 
 #: stylesheets/l10n.xml.in.h:52
 msgid "Part"
-msgstr ""
+msgstr "Частка"
 
 #: stylesheets/l10n.xml.in.h:53
 msgid "Preface"
-msgstr ""
+msgstr "Прадмова"
 
 #: stylesheets/l10n.xml.in.h:54
 msgid "Publisher"
-msgstr ""
+msgstr "Выдавец"
 
 #: stylesheets/l10n.xml.in.h:55
 msgid "Publishers"
-msgstr ""
+msgstr "Выдаўцы"
 
 #: stylesheets/l10n.xml.in.h:56
 msgid "Reference"
-msgstr ""
+msgstr "Даведнік"
 
 #: stylesheets/l10n.xml.in.h:57
 msgid "Reference Entry"
-msgstr ""
+msgstr "Запіс з даведніка"
 
 #: stylesheets/l10n.xml.in.h:58
 msgid "Reference Section"
-msgstr ""
+msgstr "Частка даведніка"
 
 #: stylesheets/l10n.xml.in.h:59
-msgid "Release Information"
-msgstr ""
-
-#: stylesheets/l10n.xml.in.h:60
 msgid "Revision History"
-msgstr ""
+msgstr "Гісторыя выданьняў"
+
+#: stylesheets/l10n.xml.in.h:61
+msgid "See"
+msgstr "Глядзіце"
 
 #: stylesheets/l10n.xml.in.h:62
-msgid "See"
-msgstr ""
+msgid "See Also"
+msgstr "Глядзіце так сама"
 
 #: stylesheets/l10n.xml.in.h:63
-msgid "See Also"
-msgstr ""
+msgid "Set Index"
+msgstr "Усталяваць індакс"
 
 #: stylesheets/l10n.xml.in.h:64
-msgid "Set Index"
-msgstr ""
+msgid "Table"
+msgstr "Табліца"
 
 #: stylesheets/l10n.xml.in.h:65
-msgid "Table"
-msgstr ""
+msgid "Table of Contents"
+msgstr "Зьмест"
 
 #: stylesheets/l10n.xml.in.h:66
-#, fuzzy
-msgid "Table of Contents"
-msgstr "Зьмест даведкі"
+msgid "Tip"
+msgstr "Парада"
 
 #: stylesheets/l10n.xml.in.h:67
-msgid "Tip"
-msgstr ""
-
-#: stylesheets/l10n.xml.in.h:68
-#, fuzzy
 msgid "Title"
-msgstr "Тытульная старонка"
+msgstr "Назва"
 
-#: stylesheets/l10n.xml.in.h:70
+#: stylesheets/l10n.xml.in.h:69
 msgid "Warning"
-msgstr ""
+msgstr "Увага"
 
 #: yelp.desktop.in.h:1
 msgid "Get help with GNOME"
@@ -683,56 +663,57 @@ msgstr "Атрымаць даведку ў асяродьдзі GNOME"
 msgid "Help"
 msgstr "Даведка"
 
-#~ msgid "The document '%s' does not exist"
-#~ msgstr "Дакумэнт \"%s\" ня існуе"
+msgid "The document '%s' does not exist"
+msgstr "Дакумэнт \"%s\" ня існуе"
 
-#~ msgid "<b>Find text in the document:</b>"
-#~ msgstr "<b>Пошук тэкста у дакумэнце:</b>"
+msgid "<b>Find text in the document:</b>"
+msgstr "<b>Пошук тэкста у дакумэнце:</b>"
 
-#~ msgid "Automatically _wrap around"
-#~ msgstr "Аўтаматычна _пераносіць"
+msgid "Automatically _wrap around"
+msgstr "Аўтаматычна _пераносіць"
 
-#~ msgid "Find text..."
-#~ msgstr "Пошук тэкста..."
+msgid "Find text..."
+msgstr "Пошук тэкста..."
 
-#~ msgid "Match _entire word"
-#~ msgstr "Поўнае _супадзеньне"
+msgid "Match _entire word"
+msgstr "Поўнае _супадзеньне"
 
-#~ msgid "_Match upper/lower case"
-#~ msgstr "_У верхнім/ніжнім рэгістрах"
+msgid "_Match upper/lower case"
+msgstr "_У верхнім/ніжнім рэгістрах"
 
-#~ msgid "_Search for:"
-#~ msgstr "Ад_шукаць па:"
+msgid "_Search for:"
+msgstr "Ад_шукаць па:"
 
-#~ msgid "GNOME - Desktop"
-#~ msgstr "Асяродзьдзе GNOME - Сталец"
+msgid "GNOME - Desktop"
+msgstr "Асяродзьдзе GNOME - Сталец"
 
-#~ msgid "Additional documents"
-#~ msgstr "Дадатковыя дакумэнты"
+msgid "Additional documents"
+msgstr "Дадатковыя дакумэнты"
 
-#~ msgid "Manual Pages"
-#~ msgstr "Старонкі кіраўніцтва"
+msgid "Manual Pages"
+msgstr "Старонкі кіраўніцтва"
 
-#~ msgid "Info Pages"
-#~ msgstr "Старонкі info"
+msgid "Info Pages"
+msgstr "Старонкі info"
 
-#~ msgid "Manual pages"
-#~ msgstr "Старонкі кіраўніцтва"
+msgid "Manual pages"
+msgstr "Старонкі кіраўніцтва"
 
-#~ msgid "GNOME is"
-#~ msgstr "Асяродзьдзе GNOME зьяўляецца"
+msgid "GNOME is"
+msgstr "Асяродзьдзе GNOME зьяўляецца"
 
-#~ msgid "Free Software"
-#~ msgstr "Вольным праграмным забясьпячэньнем"
+msgid "Free Software"
+msgstr "Вольным праграмным забясьпячэньнем"
 
-#~ msgid "(C)"
-#~ msgstr "(C)"
+msgid "(C)"
+msgstr "(C)"
 
-#~ msgid "Loading&nbsp;&nbsp;&nbsp;"
-#~ msgstr "Загрузка&nbsp;&nbsp;&nbsp;"
+msgid "Loading&nbsp;&nbsp;&nbsp;"
+msgstr "Загрузка&nbsp;&nbsp;&nbsp;"
 
-#~ msgid "Loading.&nbsp;&nbsp;"
-#~ msgstr "Загрузка.&nbsp;&nbsp;"
+msgid "Loading.&nbsp;&nbsp;"
+msgstr "Загрузка.&nbsp;&nbsp;"
 
-#~ msgid "Loading..&nbsp;"
-#~ msgstr "Загрузка..&nbsp;"
+msgid "Loading..&nbsp;"
+msgstr "Загрузка..&nbsp;"
+
