--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-02-18  Ole Laursen  <olau@hardworking.dk>
+
+	* da.po: Updated Danish translation.
+
 2003-02-17  Ales Nyakhaychyk  <nab@mail.by>
 
 	* be.po: Updated Belarusian translation.
