--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-02-24  Åsmund Skjæveland  <aasmunds@fys.uio.no>
+
+	* nn.po: Updated Norwegian Nynorsk translation.
+
 2004-02-24  Dafydd Harries  <daf@muse.19inch.net>
 
 	* cy.po: s/Rhyddhau/Rhyddhad/.
